@@ -23,8 +23,9 @@ Collate: 'dimensions.r' 'helper-arrange.r'
     'helper-col-wise.r' 'helper-count.r'
     'helper-data-frame.r' 'helper-defaults.r'
     'helper-each.r' 'helper-match-df.r' 'helper-mutate.r'
-    'helper-quick-df.r' 'helper-round-any.r'
-    'helper-splat.r' 'helper-summarise.r' 'helper-try.r'
+    'helper-quick-df.r' 'helper-rename.r'
+    'helper-round-any.r' 'helper-splat.r'
+    'helper-summarise.r' 'helper-try.r'
     'helper-vaggregate.r' 'id.r' 'immutable.r'
     'indexed-array.r' 'indexed-data-frame.r' 'indexed.r'
     'join.r' 'loop-apply.r' 'ply-array.r'
