@@ -9,6 +9,7 @@ export(each)
 export(match_df)
 export(mutate)
 export(quickdf)
+export(rename)
 export(round_any)
 export(splat)
 export(summarise, summarize)
